[gd_scene load_steps=10 format=3 uid="uid://bejx6kj0p5det"]

[ext_resource type="Texture2D" uid="uid://eaurrytwh8ts" path="res://Assets/art/icons/weapons/skoll/gladius.svg" id="1"]
[ext_resource type="PackedScene" uid="uid://c8u150t7o10vg" path="res://Data/Particles/Reward/WaterfallStarParticle.tscn" id="2"]
[ext_resource type="Script" path="res://UI/Card/Card.gd" id="3"]

[sub_resource type="Gradient" id="2"]
offsets = PackedFloat32Array(0.00862069, 0.146552, 0.840517, 1)
colors = PackedColorArray(0.992157, 1, 0.913725, 0, 0.992157, 1, 0.913725, 0.666667, 0.992157, 1, 0.913725, 0.666667, 0.992157, 1, 0.913725, 0)

[sub_resource type="GradientTexture2D" id="3"]
gradient = SubResource("2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ihf2q"]
emission_shape = 3
emission_box_extents = Vector3(60, 1, 1)
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 20, 0)
scale_min = 0.05
scale_max = 0.1
color = Color(0.835294, 1, 0.882353, 1)
color_ramp = SubResource("3")

[sub_resource type="Animation" id="Animation_ppt1s"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="1"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqw2f"]
_data = {
"setup": SubResource("Animation_ppt1s"),
"spawn": SubResource("1")
}

[node name="Card" type="Control"]
custom_minimum_size = Vector2(120, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 200.0
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(60, 100)
script = ExtResource("3")

[node name="WaterfallStarParticle" parent="." instance=ExtResource("2")]
position = Vector2(59.1667, 1.66667)
emitting = false
process_material = SubResource("ParticleProcessMaterial_ihf2q")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(120, 180)
layout_mode = 0
offset_right = 120.0
offset_bottom = 200.0
color = Color(0.14902, 0.137255, 0.2, 0.862745)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(60, 51.6667)
scale = Vector2(0.125, 0.125)
texture = ExtResource("1")

[node name="UpgradeText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 89.0
offset_right = 115.0
offset_bottom = 196.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Attack left for 1 damage."
scroll_active = false

[node name="Name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 114.0
offset_bottom = 32.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]Gladius[/center]"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dqw2f")
}

[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="mouse_entered" from="Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="_on_Background_mouse_exited"]
